--- a/regression.ipynb
+++ b/regression.ipynb
@@ -10,9 +10,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cbef6526-0257-475d-b14a-0cc0d2928052",
+   "metadata": {},
+   "source": [
+    "### Creacion de entorno virtual en Anaconda "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fc4eec64-6969-4c81-b046-88b838b00b94",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# conda create --name regression_1 python=3.8 numpy pandas matplotlib seaborn scikit-learn\n",
+    "# conda activate regression_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d12b9f98-001e-42b7-b2c5-62ca9154b58f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Carga de librerias \n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "842731c4-9196-4818-8f7b-9a216f610325",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset completo: (1460, 6)\n",
+      "Set de entrenamiento: (1168, 6)\n",
+      "Set de validación: (292, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar datos\n",
+    "data = np.load('proyecto_training_data.npy')\n",
+    "\n",
+    "# Calcular el índice para dividir los datos\n",
+    "split_index = int(len(data) * 0.8)\n",
+    "\n",
+    "# Dividir datos en entrenamiento y validación\n",
+    "train_data = data[:split_index]\n",
+    "test_data = data[split_index:]\n",
+    "\n",
+    "# Verificando las dimensiones de los conjuntos de datos\n",
+    "print(f'Dataset completo: {data.shape}')\n",
+    "print(f'Set de entrenamiento: {train_data.shape}')\n",
+    "print(f'Set de validación: {test_data.shape}')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1753349-e913-4c17-8cf7-bc6f2302dea0",
+   "id": "ef422f45-8431-4756-b8cf-38bd30f74d0b",
    "metadata": {},
    "outputs": [],
    "source": []
