--- a/regression.ipynb
+++ b/regression.ipynb
@@ -32,14 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
+   "id": "50903f0f-0ace-446c-af15-748b82505b30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Carga de librerias "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d12b9f98-001e-42b7-b2c5-62ca9154b58f",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Carga de librerias \n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -50,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "842731c4-9196-4818-8f7b-9a216f610325",
    "metadata": {
     "tags": []
@@ -84,39 +93,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "b04b87c4-09d9-4bf4-858a-fe08d0b778c8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[2.0850e+05, 7.0000e+00, 8.5600e+02, 8.0000e+00, 2.0030e+03,\n",
-       "        6.5000e+01],\n",
-       "       [1.8150e+05, 6.0000e+00, 1.2620e+03, 6.0000e+00, 1.9760e+03,\n",
-       "        8.0000e+01],\n",
-       "       [2.2350e+05, 7.0000e+00, 9.2000e+02, 6.0000e+00, 2.0010e+03,\n",
-       "        6.8000e+01],\n",
-       "       ...,\n",
-       "       [2.3317e+05, 7.0000e+00, 1.5020e+03, 7.0000e+00, 2.0090e+03,\n",
-       "        7.9000e+01],\n",
-       "       [2.4535e+05, 8.0000e+00, 1.6940e+03, 7.0000e+00, 2.0080e+03,\n",
-       "        6.4000e+01],\n",
-       "       [1.7300e+05, 6.0000e+00, 9.5900e+02, 7.0000e+00, 2.0000e+03,\n",
-       "        5.8000e+01]])"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "3d3c9fba-ae7e-44e2-849c-5c9caacd50f2",
    "metadata": {},
@@ -126,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "903e22b8-a793-418d-8cec-baa3612c3a51",
    "metadata": {
     "tags": []
@@ -271,7 +247,7 @@
        "range    292.000000  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "62dbc1a0-0eb7-4367-b002-bc3f26cb1169",
    "metadata": {
     "tags": []
@@ -400,7 +376,7 @@
        "4          84.0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "3154aa03-445d-4d57-9bd7-b7ec86ce60c1",
    "metadata": {
     "tags": []
@@ -463,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "fa6b02b8-07c2-42f8-8920-eb49ca744869",
    "metadata": {
     "tags": []
@@ -481,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "15d70ff1-0a50-45d2-93ca-f6bcba6bafa0",
    "metadata": {
     "tags": []
@@ -514,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "e2ec628a-0b77-4b1e-ba74-2e1bb3c51645",
    "metadata": {
     "tags": []
@@ -535,54 +511,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "aa597925-ab74-4d61-92b6-9e998282bb18",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def train_linear_regression(x, y, epochs, print_error_every, alpha):\n",
-    "    # Inicializar los parámetros β0 y β1\n",
-    "    beta_0 = 0\n",
-    "    beta_1 = 0\n",
+    "import numpy as np\n",
+    "\n",
+    "class LinearRegressionModel:\n",
+    "    def __init__(self):\n",
+    "        self.beta = None  #inicializacion de los betas\n",
     "    \n",
-    "    # Número de observaciones\n",
-    "    n = len(y)\n",
+    "    def train(self, x, y, epochs, print_error_every, alpha):\n",
+    "        pass  #implementaction de logica de entrenamiento\n",
     "    \n",
-    "    # Para almacenar el historial de errores\n",
-    "    errors = []\n",
+    "    def predict(self, x):\n",
+    "        pass  # Predicción aún no implementada\n",
     "    \n",
-    "    # Entrenamiento\n",
-    "    for epoch in range(1, epochs + 1):\n",
-    "        # Calcular las predicciones actuales\n",
-    "        y_pred = beta_0 + beta_1 * x\n",
-    "        \n",
-    "        # Calcular el error\n",
-    "        error = (1/(2*n)) * np.sum((y - y_pred) ** 2)\n",
-    "        errors.append(error)\n",
-    "        \n",
-    "        # Calcular gradientes\n",
-    "        grad_beta_0 = -(1/n) * np.sum(y - y_pred)\n",
-    "        grad_beta_1 = -(1/n) * np.sum((y - y_pred) * x)\n",
-    "        \n",
-    "        # Actualizar parámetros\n",
-    "        beta_0 = beta_0 - alpha * grad_beta_0\n",
-    "        beta_1 = beta_1 - alpha * grad_beta_1\n",
-    "        \n",
-    "        # Imprimir el error cada cierto número de iteraciones\n",
-    "        if epoch % print_error_every == 0:\n",
-    "            print(f'Epoch {epoch}, Error {error}')\n",
+    "    def plot_error_history(self):\n",
+    "        pass  # Visualización de historial de error \n",
     "    \n",
-    "    return beta_0, beta_1, errors"
+    "    def plot_model_evolution(self, x, y, n):\n",
+    "        pass\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "48943a0b-ce60-4a28-b247-296db00c85cf",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (1686820946.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    train_linear_regression(X_1, VariableY, 10,\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
    "source": [
     "train_linear_regression(X_1, VariableY, 10, "
    ]
