--- a/regression.ipynb
+++ b/regression.ipynb
@@ -526,15 +526,10 @@
     "    \n",
     "    def train(self, x, y, epochs, print_error_every, alpha):\n",
     "        pass  #implementaction de logica de entrenamiento\n",
-    "    \n",
     "    def predict(self, x):\n",
-    "        pass  # Predicción aún no implementada\n",
-    "    \n",
-    "    def plot_error_history(self):\n",
-    "        pass  # Visualización de historial de error \n",
-    "    \n",
-    "    def plot_model_evolution(self, x, y, n):\n",
-    "        pass\n"
+    "        \n",
+    "        X = np.vstack([np.ones(len(x)), x]).T\n",
+    "        return X.dot(self.beta)\n"
    ]
   },
   {
