--- a/regression.ipynb
+++ b/regression.ipynb
@@ -518,18 +518,23 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "class LinearRegressionModel:\n",
     "    def __init__(self):\n",
-    "        self.beta = None  #inicializacion de los betas\n",
+    "        self.beta = np.zeros(2)  \n",
     "    \n",
     "    def train(self, x, y, epochs, print_error_every, alpha):\n",
-    "        pass  #implementaction de logica de entrenamiento\n",
+    "        # Implementación básica pendiente\n",
+    "        pass\n",
+    "    \n",
     "    def predict(self, x):\n",
-    "        \n",
     "        X = np.vstack([np.ones(len(x)), x]).T\n",
-    "        return X.dot(self.beta)\n"
+    "        return X.dot(self.beta)\n",
+    "    \n",
+    "    def plot_error_history(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def plot_model_evolution(self, x, y, n):\n",
+    "        pass\n"
    ]
   },
   {
