--- a/regression.ipynb
+++ b/regression.ipynb
@@ -511,30 +511,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "aa597925-ab74-4d61-92b6-9e998282bb18",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "class LinearRegressionModel:\n",
+    "class regression_model:\n",
     "    def __init__(self):\n",
-    "        self.beta = np.zeros(2)  \n",
+    "        self.beta = np.zeros(2)  # Inicialización de parámetros\n",
     "    \n",
     "    def train(self, x, y, epochs, print_error_every, alpha):\n",
-    "        # Implementación básica pendiente\n",
-    "        pass\n",
-    "    \n",
-    "    def predict(self, x):\n",
     "        X = np.vstack([np.ones(len(x)), x]).T\n",
-    "        return X.dot(self.beta)\n",
-    "    \n",
-    "    def plot_error_history(self):\n",
-    "        pass\n",
-    "    \n",
-    "    def plot_model_evolution(self, x, y, n):\n",
-    "        pass\n"
+    "        self.error_history = []\n",
+    "        \n",
+    "        for epoch in range(epochs):\n",
+    "            y_pred = X.dot(self.beta)\n",
+    "            error = np.mean((y - y_pred) ** 2) / 2\n",
+    "            self.error_history.append(error)\n"
    ]
   },
   {
@@ -554,9 +549,7 @@
      ]
     }
    ],
-   "source": [
-    "train_linear_regression(X_1, VariableY, 10, "
-   ]
+   "source": []
   }
  ],
  "metadata": {
