--- a/regression.ipynb
+++ b/regression.ipynb
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "id": "aa597925-ab74-4d61-92b6-9e998282bb18",
    "metadata": {
     "tags": []
@@ -528,19 +528,19 @@
    "source": [
     "class uni_regression:\n",
     "    def __init__(self):\n",
-    "        self.beta = np.zeros(2)                       #betas \"zero seed\"\n",
+    "        self.beta = np.zeros(2)                       # betas \"zero seed\"\n",
     "    \n",
     "    def train(self, x, y, epochs, print_error_every, alpha):\n",
-    "        X = np.vstack([np.ones(len(x)), x]).T         #X matrix w/ 1s\n",
-    "        self.error_history = []                       #guardar el historial de errores\n",
-    "        self.model_history = []                       #guardar el historial de parametros betas\n",
+    "        X = np.vstack([np.ones(len(x)), x]).T         # X matrix w/ 1s\n",
+    "        self.error_history = []                       # vector guardar el historial de errores\n",
+    "        self.model_history = []                       # vector guardar el historial de parametros betas\n",
     "\n",
     "        for epoch in range(epochs):\n",
-    "            y_pred = X.dot(self.beta)\n",
-    "            error = np.mean((y - y_pred) ** 2) / 2\n",
+    "            y_pred = X.dot(self.beta)                 # Matrix X (producto punto) vector parametros betas\n",
+    "            error = np.mean((y - y_pred) ** 2) / 2    # Error cuadrático medio\n",
     "            self.error_history.append(error)\n",
     "            \n",
-    "            gradient = X.T.dot(y_pred - y) / len(x)\n",
+    "            gradient = X.T.dot(y_pred - y) / len(x)   # Gradiente del error con respecto a cada parámetro beta\n",
     "            self.beta -= alpha * gradient\n",
     "            self.model_history.append(self.beta.copy())\n",
     "            \n",
