--- a/regression.ipynb
+++ b/regression.ipynb
@@ -14,7 +14,7 @@
    "id": "cbef6526-0257-475d-b14a-0cc0d2928052",
    "metadata": {},
    "source": [
-    "### Creacion de entorno virtual en Anaconda "
+    "## 1. Creación de entorno virtual en Anaconda "
    ]
   },
   {
@@ -31,13 +31,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "50903f0f-0ace-446c-af15-748b82505b30",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "7da48d41-4034-430d-8d40-a37dceeea3d5",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
-    "### Carga de librerias "
+    "## 2. Carga de librerias "
    ]
   },
   {
@@ -58,8 +59,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f72b6b90-e242-4b12-a915-ec3c19287c3f",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "## 3. Carga de Data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "842731c4-9196-4818-8f7b-9a216f610325",
    "metadata": {
     "tags": []
@@ -95,9 +107,11 @@
   {
    "cell_type": "markdown",
    "id": "3d3c9fba-ae7e-44e2-849c-5c9caacd50f2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Análisis exploratorio de datos"
+    "## 4. Análisis exploratorio de datos"
    ]
   },
   {
@@ -123,6 +137,14 @@
     "\n",
     "# Agregar el rango al DataFrame de estadísticas descriptivas\n",
     "descriptive_stats.loc['range'] = ranges"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29f5f37d-1589-45d5-9f7d-aa4e2988f675",
+   "metadata": {},
+   "source": [
+    "### 4.1 Cuadros descriptivos"
    ]
   },
   {
@@ -394,6 +416,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d1151bfb-b403-408e-bb7e-d6f4dd8b5cf9",
+   "metadata": {},
+   "source": [
+    "### 4.2 Histogramas"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "3154aa03-445d-4d57-9bd7-b7ec86ce60c1",
@@ -443,6 +473,14 @@
     "- ***year_built (año de construcción):*** El histograma para el año de construcción podría revelar tendencias en la construcción de viviendas a lo largo del tiempo. Por ejemplo, podríamos ver picos que corresponden a periodos de auge de la construcción. La distribución también podría mostrar cómo las casas más antiguas se comparan en número con las más nuevas en el dataset.\n",
     "\n",
     "- ***lot_frontage (pies lineales de calle conectados a la propiedad):*** Esta variable podría tener una distribución que muestre la mayoría de las propiedades con un frente de lote estándar, con algunas propiedades teniendo frentes de lote excepcionalmente largos o cortos. Similar a otras variables continuas relacionadas con el tamaño de la propiedad, podríamos esperar un sesgo hacia la derecha, con la mayoría de las propiedades teniendo frentes de lote más cortos.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "415919db-c1f0-44a4-beef-c1cf146fc08c",
+   "metadata": {},
+   "source": [
+    "### 4.3 Correlación"
    ]
   },
   {
@@ -497,8 +535,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c02354ff-160a-4781-bb3a-728b703d3ee2",
+   "metadata": {},
+   "source": [
+    "### 4.4. Selección de variables "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "id": "e2ec628a-0b77-4b1e-ba74-2e1bb3c51645",
    "metadata": {
     "tags": []
@@ -515,6 +561,14 @@
    "source": [
     "variables_sorted_by_corr = sorted(correlation_coeffs, key=correlation_coeffs.get, reverse=True)[:2]\n",
     "print(f'Las variables con más potencial predictivo son: {variables_sorted_by_corr[0]} y {variables_sorted_by_corr[1]} con coeficientes de correlación de {correlation_coeffs[variables_sorted_by_corr[0]]:.2f} y {correlation_coeffs[variables_sorted_by_corr[1]]:.2f}, respectivamente.')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b13e827-afb2-432f-bb27-b4572d23846a",
+   "metadata": {},
+   "source": [
+    "## Entrenamiento de Modelo de Regresión"
    ]
   },
   {
