--- a/regression.ipynb
+++ b/regression.ipynb
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "fa6b02b8-07c2-42f8-8920-eb49ca744869",
    "metadata": {
     "tags": []
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "15d70ff1-0a50-45d2-93ca-f6bcba6bafa0",
    "metadata": {
     "tags": []
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "aa597925-ab74-4d61-92b6-9e998282bb18",
    "metadata": {
     "tags": []
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "832bb718-3e92-4bd8-9e8e-5cb665b47851",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
     "x = train_df['overall_qual'].values\n",
     "y = train_df['sales_price'].values\n",
     "\n",
-    "# Instancias y entrenamiento de modelo \n",
+    "# Instancias y entrenamiento de modelo Learning_rate = 0.005\n",
     "model = uni_regression()\n",
     "model.train(x, y, epochs = 25, print_error_every = 5, alpha = 0.005)\n",
     "\n",
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "id": "48943a0b-ce60-4a28-b247-296db00c85cf",
    "metadata": {
     "tags": []
@@ -739,16 +739,16 @@
     }
    ],
    "source": [
-    "# Overall Qualification \n",
-    "\n",
+    "# Entrenamiento para \"floor_sqr_feet\"\n",
     "x = train_df['floor_sqr_feet'].values\n",
     "y = train_df['sales_price'].values\n",
     "\n",
-    "# Instanciar y entrenar el modelo\n",
+    "# Instancias para entrenamiento de modelo\n",
     "model = uni_regression()\n",
     "model.train(x, y, epochs = 25, print_error_every = 5, alpha = 0.000001)\n",
     "\n",
-    "model.plot_error_history()  # Visualizar el historial de error\n",
+    "# Vizualización de error y estimaciones\n",
+    "model.plot_error_history()\n",
     "model.plot_model_evolution(x, y, 3)"
    ]
   },
@@ -777,10 +777,10 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "# Funcion comparación de entrenamientos\n",
     "def combine_predictions(x, model_manual, model_sklearn):\n",
     "    X = np.vstack([np.ones(len(x)), x]).T  # Función de entrenamiento\n",
-    "    pred_manual = model_manual.predict(x)  # Predicción con el modelo manual\n",
+    "    pred_manual = model_manual.predict(x)  # Predicción con el modelo entrenamiento manual\n",
     "    \n",
     "    x_reshaped = x.reshape(-1, 1)  # Preparación para el modelo scikit-learn\n",
     "    pred_sklearn = model_sklearn.predict(x_reshaped)  # Predicción con scikit-learn\n",
@@ -845,7 +845,7 @@
     "# Variables seleccionadas basadas en la mayor correlación\n",
     "variables = ['overall_qual', 'floor_sqr_feet']\n",
     "\n",
-    "# Entrenar modelos de scikit-learn y aplicar combine_predictions\n",
+    "# Entrenamiento con scikit-learn utilizando LinearRegression()\n",
     "for var in variables:\n",
     "    x_train = train_df[var].values.reshape(-1, 1)\n",
     "    y_train = train_df['sales_price'].values\n",
@@ -854,8 +854,8 @@
     "    x_test = test_df[var].values\n",
     "    y_test = test_df['sales_price'].values\n",
     "    \n",
-    "    # Suponiendo que model_manual ya está entrenado para esta variable\n",
-    "    model_manual = uni_regression()  # Deberías usar tu modelo entrenado específicamente\n",
+    "    # Modelo manual uni_regresssion()\n",
+    "    model_manual = uni_regression()    \n",
     "    # model_manual.train(x_train.flatten(), y_train, epochs=20, print_error_every=5, alpha=0.01)\n",
     "    \n",
     "    pred_manual, pred_sklearn, pred_combined = combine_predictions(x_test, model_manual, model_sklearn)\n",
@@ -863,14 +863,14 @@
     "    mse_sklearn = mean_squared_error(y_test, pred_sklearn)\n",
     "    mse_combined = mean_squared_error(y_test, pred_combined)\n",
     "    \n",
-    "    # Graficar MSE\n",
+    "    # Grafica comparativa del MSE\n",
     "    plt.figure()\n",
     "    plt.bar(['Manual', 'Scikit-Learn', 'Combined'], [mse_manual, mse_sklearn, mse_combined])\n",
     "    plt.title(f'MSE Comparison for {var}')\n",
     "    plt.ylabel('MSE')\n",
     "    plt.show()\n",
     "\n",
-    "    # Conclusión basada en MSE\n",
+    "    # Conclusión del mejor modelada en base al MSE\n",
     "    print(f\"Variable: {var}\")\n",
     "    print(f\"MSE Manual: {mse_manual}, MSE Scikit-Learn: {mse_sklearn}, MSE Combined: {mse_combined}\")\n",
     "    min_mse = min(mse_manual, mse_sklearn, mse_combined)\n",
@@ -886,18 +886,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bb327bf-4a90-4bb7-93c7-7423ec8b0d1c",
+   "id": "e5bba09c-903d-4714-a1dd-f7cd844c2861",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "495b5323-1cc0-4275-a03d-fc292ac36c6c",
-   "metadata": {
-    "tags": []
-   },
    "outputs": [],
    "source": []
   }
