--- a/regression.ipynb
+++ b/regression.ipynb
@@ -53,7 +53,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.learnlinear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -618,7 +618,7 @@
     "            if epoch % print_error_every == 0:\n",
     "                print(f'Epoch {epoch}, Error: {error}')   # Entiendase Epoch por el numero de iteraciones\n",
     "     \n",
-    "    # Funcion para incertari los valores pronosticados\n",
+    "    # Funcion para incertar los valores pronosticados\n",
     "    def predict(self, x):\n",
     "        X = np.vstack([np.ones(len(x)), x]).T\n",
     "        return X.dot(self.beta)\n",
@@ -631,7 +631,7 @@
     "        plt.title('Error History')\n",
     "        plt.show()\n",
     "\n",
-    "    # Gráfica para reflejar la convergencia de la estimación\n",
+    "    # Gráfica para reflejar la convergecia de la estimación\n",
     "    def plot_model_evolution(self, x, y, n):\n",
     "        plt.scatter(x, y, c=y ,cmap='cool', alpha=0.5)\n",
     "        for i in range(0, len(self.model_history), n):\n",
